kubernetes/event/nifi/nifi.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nifi
  namespace: event
  labels:
    app: nifi
spec:
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        task: nifi
        k8s-app: nifi
        app: nifi
    spec:
      containers:
      - name: nifi
        ports:
        - containerPort: 8080 
        - containerPort: 8082 
        image: apache/nifi
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        # env:
        # - name: nifi_NOTEBOOK_DIR
        #   value: "/notebook"
        volumeMounts:
          - name: nifi-conf
            mountPath: /opt/nifi/nifi-current/conf
          - name: nifi-state
            mountPath: /opt/nifi/nifi-current/state 
          - name: nifi-database-repository
            mountPath: /opt/nifi/nifi-current/database_repository
          - name: nifi-flowfile-repository
            mountPath: /opt/nifi/nifi-current/flowfile_repository
          - name: nifi-content-repository
            mountPath: /opt/nifi/nifi-current/content_repository
          - name: nifi-provenance-repository
            mountPath: /opt/nifi/nifi-current/provenance_repository
      volumes:
        - name: nifi-conf
          persistentVolumeClaim:
            claimName: nifi-conf-claim
        - name: nifi-state
          persistentVolumeClaim:
            claimName: nifi-state-claim
        - name: nifi-database-repository
          persistentVolumeClaim:
            claimName: nifi-database-repository-claim
        - name: nifi-flowfile-repository
          persistentVolumeClaim:
            claimName: nifi-flowfile-repository-claim
        - name: nifi-content-repository
          persistentVolumeClaim:
            claimName: nifi-content-repository-claim
        - name: nifi-provenance-repository
          persistentVolumeClaim:
            claimName: nifi-provenance-repository-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  namespace: event
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: protocol
    port: 8082
    targetPort: 8082
  selector:
    app: nifi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nifi
  namespace: event
spec:
  rules:
  - host: nifi.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: nifi
          servicePort: 80
